# genesis

./: .justfile  .pre-commit-config.yaml  README.md  pyproject.toml  shell.nix
src/: README.md  fly_route.py  interactive_drone.py
