[project]
name = "go2_genesis"
version = "0.1.0"
description = "Mjlab tasks for the Unitree Go2."
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "genesis",
    "pynput",
    "torch",
    "torchvision",
]

[dependency-groups]
dev = ["pre-commit>=4.1.0", "ipykernel>=6.29.5"]

[project.scripts]

[tool.uv.sources]
genesis = { git = "https://github.com/Genesis-Embodied-AI/Genesis.git", branch = "main" }
